Test mit Barbara

--- a/views/index.html
+++ b/views/index.html
@@ -217,7 +217,7 @@ pre {
 <section class='container'>
           <hgroup>
             <h1>Welcome to your Node.js application on OpenShift</h1>
-            Kamksker Version 
+            Kamksker Version jetzt aber neu 
           </hgroup>
 
 
